add crs endpoints to retrieve crs info
